---
config:
  theme: neo-dark
---
classDiagram
direction TB

    class IPuzzlePausable {
        <<Interface>>
        + PuzzlePauseMe()
        + PuzzleResumeMe()
    }

    class GameManager {
        <<Singleton>>
	    - static GameManager instance
	    - bool isGameOver
        - bool isPuzzleActive
	    - DataManager dataManager
	    - List~IGameOverSubscriber~ gameOverSubscribers
        - List~IPuzzlePausable~ puzzlePausables
	    - GameManager()
	    + static GetInstance() GameManager
	    + ChangeScene(sceneName: string)
	    + notifySubscribers()
	    + OnGameOver(reason: string)
	    + OnVictory()
	    + Subscribe(observer: IGameOverSubscriber)
	    + Unsubscribe(observer: IGameOverSubscriber)
        + SubscribePuzzlePausable(IPuzzlePausable)
        + UnsubscribePuzzlePausable(IPuzzlePausable)
        + PuzzlePauseAll()
        + PuzzleResumeAll()
        + SwitchIsPuzzleActive()
    }

    class PlayerController {
	    - float moveSpeed
        + Start()
        + Update()
        + PuzzlePauseMe()
        + PuzzleResumeMe()
	    + Move(direction: Vector2)
	    + OnGameOver()
        + OnDestroy()
    }

    class HealthManager {
	    - int maxLives
	    - int currentLives
	    - bool isDead
	    + TakeDamage(amount: int)
	    + IsDead() bool
	    + NotifyDeath()
    }

	class PuzzleHalo {
        + float pulseSpeed
        + float maxScale
        + SpriteRenderer haloSr
        + Vector3 haloBaseScale
        + float minimumTransparency
        + bool isPlayerClose
        + Start()
        + Update()
        + Pulse(float)
        + Glow(float)
        + OnTriggerEnter2D(Collider2D)
        + OnTriggerExit2D(Collider2D)
        + PuzzlePauseMe()
        + PuzzleResumeMe()
        + OnDestroy()
    }

    class CountdownManager {
	    - float maxTime
	    - float currentTime
	    + UpdateCountdown(deltaTime: float)
	    + ResetCountdown()
	    + NotifyTimeUp()
    }

    class IGameOverSubscriber {
	    + OnGameOver()
    }

	

    class IPuzzleManager {
        <<interface>>
        + StartPuzzle() void
        + CompletePuzzle() void
        + GetScore() float
        + GetPerformanceResult() PerformanceResult
    }

	

    class PuzzleManager {
	    - int score
	    - FeedbackText feedbackText
        - PuzzleHalo halo
        - GameObject puzzleGameplayPrefab
        - AbstractPuzzleGameplay gameplay
        - PerformanceResult performanceResult
        - GameManager gameManager
        + bool isVictoryAchieved
        + OnTap()
        + Start()
        + OnDestroy()
	    + ShowFeedback(string: qualitativeResult)
        + PuzzlePauseMe()
        + PuzzleResumeMe()
         + StartPuzzle()
	    + CompletePuzzle()
	    + GetScore() float
	    + GetPerformanceResult() PerformanceResult
    }

	class ITappable {
        <<interface>>
        + OnTap()
    }

	class InputHandler {
        - Raycaster raycaster
        + void Start()
        + void OnDestroy()
        + void OnTap(InputAction.CallbackContext context)
    }

    class Raycaster {
        - Camera mainCamera
        + void Start()
        + void ProcessTap(Vector2 screenPosition)
    }

    class ControlsManager {
        - Map map
        - static Map.PlayerActions controls
        - static ControlsManager instance
        + void Awake()
        + static Map.PlayerActions getControls()
        + void OnEnable()
        + void OnDisable()
    }

    class PerformanceResult {
	    - int numericScore
	    - string qualitativeResult
		+ calculateNumericScore()
		+ setQualitativeResult()
	    + toString() string
    }

    class PuzzleTutorial {
	    - string title
	    - Image gifTutorial
	    - string tutorialDescription
        + close()
    }

    class FeedbackText {
	    - string text
	    + Show(position: Vector3, text: string)
    }

    class DataManager {
	    - string basePath
        - static DataManager instance
        - RunData runData
	    + SaveTutorialFlag(puzzleId: string)
	    + LoadTutorialFlag(puzzleId: string) bool
	    + SaveRunResult()
	    + LoadRunHistory() List~RunData~
        - DataManager()
        + getInstance() DataManager
        + savePuzzleScore(puzzleId: string)
    }

    class RunData {
	    + int runId
	    + Dictionary~string,int[]~ puzzleScores
    }
	
    class JournalManager {
        - string[] puzzlesIds
	    + LoadDiscoveredPuzzles()
	    + ShowJournalUI()
    }
	
    class EasterEgg {
	    - bool isActivated
	    + OnClick()
	    + PlayAnimation()
    }


    %% Abstract Class
    class AbstractPuzzleGameplay {
        <<abstract>>
        # DataManager dataManager
        # GameObject background
        # bool isFirstTimePlaying
        # GameObject tutorialPrefab
        + StartGameplay()* 
        + SpawnBackground(Vector3, Quaternion, Transform) 
        + Victory()* 
        + Defeat()* 
        + ShowTutorial() 
        + IsFirstTime() bool
    }

	
    GameManager <.. PuzzleHalo: subscribes

	<<interface>> IGameOverSubscriber

    IPuzzlePausable <|.. PuzzleHalo
    IPuzzlePausable <|.. PuzzleManager
    IPuzzlePausable <|.. PlayerController
    

    
    GameManager <.. PlayerController: subscribes
    GameManager <.. PuzzleManager: subscribes
	
    PlayerController ..|> IGameOverSubscriber
    GameManager <.. HealthManager : notifica derrota
    GameManager <.. CountdownManager : notifica timeout
    IGameOverSubscriber --o GameManager
    IPuzzleManager <|.. PuzzleManager
	ITappable <|.. PuzzleManager
    PuzzleManager *-- FeedbackText
    PuzzleManager *-- PerformanceResult
	PuzzleManager *-- PuzzleHalo : Serialized field
    PuzzleTutorial -- AbstractPuzzleGameplay 
    PuzzleManager *-- AbstractPuzzleGameplay
	
    PuzzleManager -- DataManager
	
    DataManager o-- RunData
    AbstractPuzzleGameplay o-- DataManager
    DataManager -- JournalManager 
    GameManager o-- DataManager
	IPuzzlePausable --o GameManager
    PuzzleManager -- GameManager : reporta resultado


	InputHandler -- Raycaster : serialized field
    InputHandler -- ControlsManager : uses getControls()
	Raycaster -- ITappable : TryGetComponent and calls OnTap()